<resources>
    <string name="app_name">Loanzzones Emi Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loanamount">Loan Amount</string>
    <string name="_0">0</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="loan_tenure">Loan Tenure</string>
    <string name="calculate">Calculate</string>
    <string name="currency_symbol">\u20B9</string>
    <string name="emi">EMI</string>
    <string name="interest">Interest</string>
    <string name="amount">Amount</string>
    <string name="percentage">%</string>
    <string name="tenure">Tenure</string>
    <string name="months">Months</string>
    <string name="select_company">Select Company</string>
    <string name="select_segment">Select Segment</string>

    <string-array name="emitype">

        <item>EMI Type</item>
        <item>Reducing</item>
        <item>Flat</item>
    </string-array>

    <string-array name="company">
        <item>BF</item>

    </string-array>
    <string-array name="categoryemployee">
        <item>Self Employed</item>
        <item>Salaried Employed</item>

    </string-array>
    <string-array name="segments">
        <item>Super WOW</item>
        <item>WOW</item>
        <item>WOW Lite</item>
        <item>Normal</item>

    </string-array>
    <string-array name="maxsalarypercent">
        <item>"35"</item>
        <item>"40"</item>
        <item>"45"</item>
        <item>"50"</item>
        <item>"55"</item>
        <item>"60"</item>
        <item>"65"</item>
        <item>"70"</item>
        <item>"75"</item>
        <item>"80"</item>
        <item>"85"</item>
        <item>"90"</item>
        <item>"95"</item>


    </string-array>
    <string-array name="ltvmaxpropervalue">
        <item>"60"</item>
        <item>"65"</item>
        <item>"70"</item>
        <item>"75"</item>
        <item>"80"</item>
        <item>"85"</item>
        <item>"90"</item>
        <item>"95"</item>
        <item>"100"</item>


    </string-array>
    <string-array name="percentagreementvalue">
        <item>"80"</item>
        <item>"90"</item>
        <item>"100"</item>
        <item>"110"</item>
        <item>"120"</item>
        <item>"130"</item>
        <item>"140"</item>
        <item>"150"</item>
        <item>"160"</item>
        <item>"170"</item>
        <item>"180"</item>
        <item>"190"</item>
        <item>"200"</item>


    </string-array>
    <string-array name="compoundingfrequency">
        <item>Yearly</item>
        <item>Half-Yearly</item>
        <item>Quarterly</item>
        <item>Monthly</item>
        <item>Half-Monthly</item>
        <item>Weekly</item>
        <item>Daily</item>

    </string-array>
    <string name="lbl_emi_starting_time">EMI Start From :</string>
    <string name="list_title_balance">Outstanding</string>

    <string name="hint_sanctioned_amount">Sanctioned Amount</string>
    <string name="outstanding_amount">Outstanding Amount</string>
    <string name="number_of_emi_paid">Number of EMI Paid</string>
    <string name="multipliers">MULTIPLIERS :</string>
    <string name="bt_amount">BT Amount</string>
    <string name="topup_amount">Topup Amount</string>
    <string name="btroi">BT ROI</string>
    <string name="top_roi">Topup ROI</string>
    <string name="topup_emi">Topup EMI</string>
    <string name="bt_emi">BT EMI</string>
    <string name="processing_fees">Processing Fees</string>
    <string name="processing_fees_with_gst">Processing Fees With GST</string>
    <string name="insurance">Insurance</string>
    <string name="insurance_with_gst">Insurance with GST</string>
    <string name="topup_emi_with_insurance">Topup EMI With Insurance</string>
    <string name="total_emi">Total EMI</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_mobile">Customer Mobile</string>
    <string name="customer_reference">Customer Reference</string>
    <string name="monthly_salary">Monthly Salary</string>
    <string name="salary_details">Salary Details</string>
    <string name="foir_max_of_salary">FOIR(Max % of Salary)</string>
    <string name="existing_emi">Existing EMI</string>
    <string name="eligible_emi">Eligible EMI</string>
    <string name="interest_rate_per_year">Interest Rate Per Year</string>
    <string name="tenure_in_years">Tenure in Years</string>
    <string name="property_details">Property Details</string>
    <string name="property_value">Property Value</string>
    <string name="document_details">Document Details</string>
    <string name="agreement_value">Agreement Value</string>
    <string name="ltv_max_of_property_value">LTV (Max. % of Property Value)</string>
    <string name="of_agreement_value">% of Agreement Value</string>
    <string name="loan_based_on_salary">Loan Based on Salary</string>
    <string name="loan_based_on_property">Loan Based on Property</string>
    <string name="loan_based_on_agreement">Loan Based on Agreement</string>
    <string name="emi_per_lakhs">EMI per Lakhs</string>
    <string name="compound_interest_calculator">Compound Interest Calculator</string>
    <string name="principal_amount">Principal Amount</string>
    <string name="rate_of_return">Rate of Return</string>
    <string name="compounding_frequency">Compounding Frequency</string>
    <string name="compound_interest_amount">Compound Interest Amount</string>
    <string name="principle_amount">Principle Amount</string>
    <string name="interest_on_total_amount">Interest % on Total Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="schedule">Schedule</string>
    <string name="list_title_sr_no">Sr.</string>
    <string name="list_title_month">Month</string>
    <string name="list_title_principal">Principal</string>
    <string name="list_title_interest">Interest</string>
    <string name="list_title_emi">EMI</string>
    <string name="tag_datepicker">datePicker</string>
    <string name="interest_rate_percent">Interest Rate(%)</string>
    <string name="loan_tenure_months">Loan Tenure(Months)</string>
    <string name="rb_pr">pr</string>
    <string name="rb_rs">rs</string>
    <string name="reset">reset</string>
    <string name="salary">Salary</string>
    <string name="current_balance">Current Balance</string>
    <string name="bt_tenure">Bt Tenure(in Months)</string>
    <string name="top_up_tenure">Top Up Tenure(in Months)</string>
    <string name="foir">Foir</string>


</resources>