<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primaryDarkColor"
        android:text="Repayment Schedule"
        android:textSize="20dp"
        android:fontFamily="@font/poppinsregular"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"/>

    <include
        android:id="@+id/emi_statistics"
        android:layout_margin="5dp"
        layout="@layout/view_emi_statistics_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:text="@string/lbl_emi_starting_time"
            android:textColor="@color/primaryDarkColor"
            android:fontFamily="@font/poppinsregular"
            android:textSize="15dp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/date_background"
            android:orientation="horizontal"
            android:paddingRight="4dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:padding="2dp"
                android:src="@drawable/ic_calender" />

            <TextView
                android:id="@+id/activity_statistics_et_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="false"
                android:padding="4dp"
                android:text="Date"
                android:textSize="18sp" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2D000000"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="4">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/statistics_rbtn_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/poppinsregular"
                android:text="Monthly" />

            <RadioButton
                android:id="@+id/statistics_rbtn_yearly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:fontFamily="@font/poppinsregular"
                android:text="Yearly" />
        </RadioGroup>

        <!--        <Button-->
        <!--            android:id="@+id/btn_share"-->
        <!--            style="@style/BrandButtonStyle"-->
        <!--            android:layout_weight="1"-->
        <!--            android:fontFamily="sans-serif"-->
        <!--           -->
        <!--            android:text="PDF" />-->

        <!--        <Button-->
        <!--            android:id="@+id/btn_excel"-->
        <!--            style="@style/BrandButtonStyle"-->
        <!--            android:layout_weight="1"-->
        <!--            android:fontFamily="sans-serif"-->
        <!--            android:text="Excel" />-->
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="3dp"
        android:paddingBottom="3dp">

        <TextView
            android:id="@+id/activity_statistics_tv_srname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/list_title_sr_no"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/activity_statistics_tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/list_title_month"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/list_title_principal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            android:visibility="visible" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/list_title_interest"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            android:visibility="visible" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/list_title_emi"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            android:visibility="gone" />

        <TextView
            android:id="@+id/activity_statistics_tv_lbl_gst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="5dp"
            android:text="GST"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            android:visibility="gone" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/list_title_balance"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        style="@style/HorizontalLine"
        android:layout_height="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list_view_monthly"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>
