<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Compond_interestActivity"
    android:background="@drawable/bg"
    >

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="end"
        android:id="@+id/drawer_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linear_toolbar"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">


                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:layout_margin="10dp"
                        android:id="@+id/toolbar"
                        android:background="@drawable/ic_menu"
                        android:backgroundTint="@color/white"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="EMI"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:id="@+id/tv1"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Calculator"
                            android:layout_marginLeft="5dp"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:textColor="@color/secondaryColor"
                            android:layout_toRightOf="@+id/tv1"
                            />

                    </LinearLayout>



                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:text="@string/compound_interest_calculator"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/reset"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_baseline_refresh_24"/>
                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"/>
                        <ImageView
                            android:id="@+id/imgShare"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_baseline_share_24"/>

                    </LinearLayout>




                </RelativeLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/currency_symbol"
                                android:textColor="@color/primaryColor"
                                android:layout_gravity="center"
                                android:layout_marginTop="5dp"
                                android:textSize="20dp"/>
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/tilPrincipalAmount"
                                android:layout_marginStart="3dp"
                                android:layout_gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.Design.TextInputLayout"
                                android:hint="@string/principal_amount">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/etPrincipal"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:maxLength="14"
                                    android:inputType="number"
                                    />
                            </com.google.android.material.textfield.TextInputLayout>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/percentage"
                                android:textColor="@color/primaryColor"
                                android:layout_gravity="center"
                                android:layout_marginTop="5dp"
                                android:textSize="20dp"/>
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/tilTenure"
                                android:layout_marginStart="3dp"
                                android:layout_gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.Design.TextInputLayout"
                                android:hint="@string/rate_of_return">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/etInterestRate"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:maxLength="5"
                                    android:inputType="numberDecimal"
                                    />
                            </com.google.android.material.textfield.TextInputLayout>


                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="5"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_weight="3"
                                android:layout_marginStart="3dp"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Widget.Design.TextInputLayout"
                                android:hint="@string/tenure">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/etTenure"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="number"
                                    android:maxLength="3" />
                            </com.google.android.material.textfield.TextInputLayout>
                            <RadioGroup
                                android:layout_gravity="bottom"
                                android:orientation="horizontal"
                                android:layout_width="0dp"
                                android:layout_marginBottom="8dp"
                                android:layout_height="40dp"
                                android:layout_weight="2">
                                <RadioButton
                                    android:id="@+id/rbTenureYears"
                                    android:text="Years"
                                    android:gravity="center"
                                    style="@style/rbSwitch"
                                    android:checked="true"
                                    android:textSize="12dp"/>
                                <RadioButton
                                    android:id="@+id/rbTenureMonth"
                                    android:text="Months"
                                    android:gravity="center"
                                    style="@style/rbSwitch"
                                    android:textSize="12dp"/>
                            </RadioGroup>



                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10dp"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/primaryColor"
                            android:text="@string/compounding_frequency"/>


                        <Spinner
                            android:id="@+id/spCompoundingFrequency"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:entries="@array/compoundingfrequency"
                            />



                        <Button
                            android:id="@+id/calculate_btn"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_gravity="bottom"
                            android:layout_marginLeft="40dp"
                            android:layout_marginRight="40dp"
                            android:layout_marginBottom="20dp"
                            android:backgroundTint="@color/primaryColor"
                            android:text="@string/calculate"
                            android:textStyle="bold"
                            />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>




        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/secondaryLightColor"
            android:layout_gravity="start"
            app:itemTextColor="@color/primaryColor"
            app:menu="@menu/activity_main_drawer"
            app:itemIconTint="@color/primaryDarkColor"
            app:itemVerticalPadding="20dp"
            android:layout_marginTop="20dp"
            app:headerLayout="@layout/nav_header_main"

            />




    </androidx.drawerlayout.widget.DrawerLayout>
    <include
        layout="@layout/bottom_sheet_compound_interest"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>